# src/chat/controllers/message.controller.ts
@@ -1,5 +1,7 @@
-import { Controller, Get, Param } from '@nestjs/common';
+import { Controller, Get, Param, HttpCode } from '@nestjs/common';
+import { ApiOperation, ApiResponse } from '@nestjs/swagger';
 import { MessageService } from '../services/message.service';
+import { CreateMessageDto } from '../dto/create-message.dto';
 
 @Controller('message')
 export class MessageController {
@@ -8,7 +10,17 @@ export class MessageController {
     ) { }
 
 
+
+    @ApiOperation({ summary: 'Get messages of a conversation' })
+    @ApiResponse({
+        status: 201,
+        description: 'Messages retrieved successfully',
+        type: CreateMessageDto,
+        isArray: true
+    })
+
     @Get(':conversation_id/:user_id')
+    @HttpCode(201)
     async getMessages(
         @Param('conversation_id') conversation_id: string,
         @Param('user_id') user_id: string,
